@@ -23,7 +23,6 @@ FEATURES:
 7 implement LocationList window, and get rid off/change PreviewWindow to be a real preview window being able to display html pages
 7 [ctrl-o/i] to Go back to a Previous Position (done partly, however currenty does not use a per tab jumplist)
 7 whereever possible: get rid of dialogs and ask console-like dialog questions or write error prompts directly on the webpage or with :echo()
-7 :set! should also set about:config options (with autocomplete)
 7 [d could go to the last domain in the history stack. so if i browse from
   google to another page and click 10 links there, [d would take me back to the google page
   opera's fast forward does something like this
