@@ -9,6 +9,7 @@
     * IMPORTANT: changed 'I' key to Ctrl-Q to also work in textboxes
     * IMPORTANT: :bmarks! and :history! open the matching items now in a tab, instead
       of bringing up the bookmarks/history window
+    * :set! now lets you change about:config prefs similar to :set
     * new :command to add user defined commands
     * new setCustomMode for plugin writers
     * :au[tocmd] executes commands on events (only 'PageLoad' actually) on websites
